[package]
name = "ssg"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.6", features = ["derive"] }
lindera-tantivy = "0.8.1"
pulldown-cmark = "0.9.0"
serde = "1.0.133"
tantivy = "0.16.1"
tera = { version = "1.15.0", default-features = false }
yaml-front-matter = "0.1.0"
