[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.5.0"
actix-rt = "1.1.1"
actix-web = { version = "3.3.3", features = ["openssl"] }
anyhow = "1.0.55"
env_logger = "0.9.0"
envy = "0.4.2"
futures = "0.3.21"
log = "0.4.14"
openssl = "0.10.38"
serde = "1.0.136"
