[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-rt = "2.7"
actix-web = { version = "4.2.1", features = ["openssl"] }
anyhow = "1.0.66"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.25"
log = "0.4.17"
openssl = "0.10.44"
serde = "1.0.150"
